# zombiedice

./: .gitignore  CMakeLists.txt  Makefile
include/: common.h  console_color.h  dice_set.h  die.h  display_tty.h  player.h
src/: dice_set.cpp  die.cpp  display_tty.cpp  main.cpp  player.cpp
